src/test/resources/Parser/SyntaxErrors/AccessForbidden.front
class A:
    private static int32 i;

class B:
    void test() {
        A.i;
    }